quetzal_react/src/styles/Accounts.css
.accounts {
    display: flex;
    flex-direction: column;
    grid-column: 2;
    grid-row: 2;
    padding: 16px;
    padding-left: 0px;
    gap: 16px;
    height: calc(100vh - 48px - 32px);
}

.accounts-graph {
    background-color: #dddddd;
    justify-content: center;
    align-items: center;
    padding: 16px;
    width: calc(100% - 32px);
    height: 30%;
    border: 1px solid #bbbbbb;
}

.accounts-graph-balance-container {
    position: relative;
    display: inline-block;
    border: 1px solid #bbbbbb;
    transition: background-color 250ms ease;
    transition: font-size 250ms ease;
}

.dot {
    position: absolute;
    top: -3px;
    right: -4px;
    background-color: #cccccc;
    border: 1px solid #999999;
    width: 6px;
    height: 6px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.accounts-graph-balance-container:hover,
.accounts-graph-balance-container-dot:hover {
    background-color: #cccccc;
    font-size: 18px;
}

.accounts-graph-balance-container:hover .accounts-graph-balance-list {
    display: flex;
}

.accounts-graph-balance {
    padding: 8px;
}

.accounts-graph-balance-list {
    display: none;
    padding: 8px;
    justify-content: left;
    align-items: center;
    border-top: 1px solid #bbbbbb;
}
.accounts-graph-balance-list:hover {
    background-color: #bbbbbb;
}

.accounts-table-container {
    background-color: #dddddd;
    padding: 16px;
    width: calc(100% - 32px);
    height: 100%;
    border: 1px solid #bbbbbb;
    scroll-snap-type: y proximity;
    overflow-y: auto;
    scroll-padding: 20%;
}

.accounts-table-header {
    position: sticky;
    background-color: #dddddd;
    display: flex;
    top: 0px;
    z-index: 30;
    display: flex;
    grid-column: 1 / -1;
    grid-row: 1;
    justify-content: space-between;
    box-sizing: border-box;
    box-shadow: 0 -30px 0 #dddddd;
    gap: 8px;
}

.accounts-table-title {
    padding: 8px;
    border: 1px solid #bbbbbb;
}

.table-header-input {
    font-size: 12px;
    background-color: #dddddd;
    width: 100%;
    border: 1px solid #bbbbbb;
    box-sizing: border-box;
    transition: background-color 250ms ease;
}
.table-header-input::placeholder {
    font-size: 12px;
    text-align: center;
}

.table-header-input:hover {
    background-color: #eeeeee;
    transition: background-color 250ms ease;
    border: 1px solid #999999;
}

.table-header-button-container {
    display: flex;
    justify-content: right;
    gap: 8px;
}

.add-account-container {
    display: flex;
}

.add-account-button {
    align-items: center;
    background-color: #cccccc;
    border: none;
    font-size: 13px;
    transition: background-color 250ms ease;
    border: 1px solid #bbbbbb;
    width: 144px;
}

.add-account-button:hover {
    background-color: #eeeeee;
}

.add-account-button,
.accounts-graph-balance,
.accounts-graph-balance-list,
.accounts-table-title {
    cursor: pointer;
}

